# Bot-Street

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  test_api.py  test_base_bot.py  test_bots.py  test_cli.py  test_engine.py
api/: main.py  mcp_server.py  models.py
api/routes/: market.py  market_status.py  orders.py  portfolio.py
core/: kafka_client.py  schemas.py
display/: dashboard.py
engine/: candle_aggregator.py  circuit_breaker.py  matching_engine.py  order_book.py  portfolio_ledger.py  trade_logger.py
market/: price_feed.py  sentiment_engine.py
market/quant/: indicators.py  microstructure.py  risk.py
participants/: base_bot.py  market_maker.py  mean_reversion_bot.py  momentum_bot.py  random_bot.py
scripts/: kafka-kraft.properties  start.sh
user/: cli.py
